added skills section

--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
       rel="stylesheet"
       href="./node_modules/bootstrap/dist/css/bootstrap.min.css"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
     <link rel="stylesheet" href="./styles/style.css" />
     <title>resume</title>
   </head>
@@ -65,7 +69,177 @@
         </div>
       </section>
       <section class="skills">
-        <div class="container"><a id="skills">about</a></div>
+        <div class="container">
+          <a id="skills"></a>
+          <h2 class="title skills">Skills</h2>
+          <div class="skills__items d-flex justify-content-between">
+            <div class="skill__item d-flex flex-column">
+              <div class="skill__item__img">
+                <img src="./assets/imgs/icons/html5.svg" alt="html5" />
+              </div>
+              <div class="skill__item__skill">HTML</div>
+              <div class="skill__item__stars">
+                <span class="fa fa-star checked"></span>
+                <span class="fa fa-star checked"></span>
+                <span class="fa fa-star checked"></span>
+                <span class="fa fa-star checked"></span>
+                <span class="fa fa-star checked"></span>
+              </div>
+            </div>
+            <div class="skill__item d-flex flex-column">
+              <div class="skill__item__img">
+                <img src="./assets/imgs/icons/css3.svg" alt="css3" />
+              </div>
+              <div class="skill__item__skill">CSS</div>
+              <div class="skill__item__stars">
+                <span class="fa fa-star checked"></span>
+                <span class="fa fa-star checked"></span>
+                <span class="fa fa-star checked"></span>
+                <span class="fa fa-star checked"></span>
+                <span class="fa fa-star checked"></span>
+              </div>
+            </div>
+            <div class="skill__item d-flex flex-column">
+              <div class="skill__item__img">
+                <img src="./assets/imgs/icons/sass.svg" alt="sass" />
+              </div>
+              <div class="skill__item__skill">SAAS</div>
+              <div class="skill__item__stars">
+                <span class="fa fa-star checked"></span>
+                <span class="fa fa-star checked"></span>
+                <span class="fa fa-star checked"></span>
+                <span class="fa fa-star checked"></span>
+                <span class="fa fa-star checked"></span>
+              </div>
+            </div>
+            <div class="skill__item d-flex flex-column">
+              <div class="skill__item__img">
+                <img src="./assets/imgs/icons/git.svg" alt="git" />
+              </div>
+              <div class="skill__item__skill">Git</div>
+              <div class="skill__item__stars">
+                <span class="fa fa-star checked"></span>
+                <span class="fa fa-star checked"></span>
+                <span class="fa fa-star checked"></span>
+                <span class="fa fa-star checked"></span>
+                <span class="fa fa-star checked"></span>
+              </div>
+            </div>
+            <div class="skill__item d-flex flex-column">
+              <div class="skill__item__img">
+                <img
+                  src="./assets/imgs/icons/javascript.svg"
+                  alt="javascript"
+                />
+              </div>
+              <div class="skill__item__skill">JavaScript</div>
+              <div class="skill__item__stars">
+                <span class="fa fa-star checked"></span>
+                <span class="fa fa-star"></span>
+                <span class="fa fa-star"></span>
+                <span class="fa fa-star"></span>
+                <span class="fa fa-star"></span>
+              </div>
+            </div>
+            <div class="skill__item d-flex flex-column">
+              <div class="skill__item__img">
+                <img src="./assets/imgs/icons/github.svg" alt="github" />
+              </div>
+              <div class="skill__item__skill">Github</div>
+              <div class="skill__item__stars">
+                <span class="fa fa-star checked"></span>
+                <span class="fa fa-star checked"></span>
+                <span class="fa fa-star checked"></span>
+                <span class="fa fa-star checked"></span>
+                <span class="fa fa-star checked"></span>
+              </div>
+            </div>
+          </div>
+
+          <div class="skills__hidden" id="secondBlockId">
+            <div class="skills__items d-flex justify-content-between">
+              <div class="skill__item d-flex flex-column">
+                <div class="skill__item__img">
+                  <img src="./assets/imgs/icons/pug.svg" alt="Pug" />
+                </div>
+                <div class="skill__item__skill">Pug</div>
+                <div class="skill__item__stars">
+                  <span class="fa fa-star checked"></span>
+                  <span class="fa fa-star checked"></span>
+                  <span class="fa fa-star checked"></span>
+                  <span class="fa fa-star"></span>
+                  <span class="fa fa-star"></span>
+                </div>
+              </div>
+              <div class="skill__item d-flex flex-column">
+                <div class="skill__item__img">
+                  <img src="./assets/imgs/icons/webpack.svg" alt="webpack" />
+                </div>
+                <div class="skill__item__skill">Webpack</div>
+                <div class="skill__item__stars">
+                  <span class="fa fa-star checked"></span>
+                  <span class="fa fa-star checked"></span>
+                  <span class="fa fa-star checked"></span>
+                  <span class="fa fa-star checked"></span>
+                  <span class="fa fa-star checked"></span>
+                </div>
+              </div>
+              <div class="skill__item d-flex flex-column">
+                <div class="skill__item__img">
+                  <img src="./assets/imgs/icons/babel.svg" alt="Babel" />
+                </div>
+                <div class="skill__item__skill">Babel</div>
+                <div class="skill__item__stars">
+                  <span class="fa fa-star checked"></span>
+                  <span class="fa fa-star"></span>
+                  <span class="fa fa-star"></span>
+                  <span class="fa fa-star"></span>
+                  <span class="fa fa-star"></span>
+                </div>
+              </div>
+              <div class="skill__item d-flex flex-column">
+                <div class="skill__item__img">
+                  <img src="./assets/imgs/icons/node.svg" alt="Node.js" />
+                </div>
+                <div class="skill__item__skill">Node.js</div>
+                <div class="skill__item__stars">
+                  <span class="fa fa-star checked"></span>
+                  <span class="fa fa-star"></span>
+                  <span class="fa fa-star"></span>
+                  <span class="fa fa-star"></span>
+                  <span class="fa fa-star"></span>
+                </div>
+              </div>
+              <div class="skill__item d-flex flex-column">
+                <div class="skill__item__img">
+                  <img src="./assets/imgs/icons/npm.svg" alt="npm" />
+                </div>
+                <div class="skill__item__skill">npm</div>
+                <div class="skill__item__stars">
+                  <span class="fa fa-star checked"></span>
+                  <span class="fa fa-star"></span>
+                  <span class="fa fa-star"></span>
+                  <span class="fa fa-star"></span>
+                  <span class="fa fa-star"></span>
+                </div>
+              </div>
+              <div class="skill__item d-flex flex-column">
+                <div class="skill__item__img">
+                  <img src="./assets/imgs/icons/react.svg" alt="React" />
+                </div>
+                <div class="skill__item__skill">React</div>
+                <div class="skill__item__stars">
+                  <span class="fa fa-star checked"></span>
+                  <span class="fa fa-star"></span>
+                  <span class="fa fa-star"></span>
+                  <span class="fa fa-star"></span>
+                  <span class="fa fa-star"></span>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="skills__arrow" onclick="myFunction()" id="myBtn"></div>
+        </div>
       </section>
       <section class="experience">
         <div class="container"><a id="experience">about</a></div>
