changed paddings in skills section

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
         <div class="container">
           <a id="skills"></a>
           <h2 class="title skills">Skills</h2>
-          <div class="skills__items d-flex justify-content-between">
+          <div class="skills__items d-flex justify-content-start">
             <div class="skill__item d-flex flex-column">
               <div class="skill__item__img">
                 <img src="./assets/imgs/icons/html5.svg" alt="html5" />
