--- a/index.html
+++ b/index.html
@@ -246,70 +246,50 @@
           <a id="experience"></a>
           <h2 class="title skills">Work experience</h2>
           <div class="timeline">
-            <div class="cont left">
-              <div class="content">
-                <h2>2017</h2>
-                <p>
-                  Lorem ipsum dolor sit amet, quo ei simul congue exerci, ad nec
-                  admodum perfecto mnesarchum, vim ea mazim fierent detracto. Ea
-                  quis iuvaret expetendis his, te elit voluptua dignissim per,
-                  habeo iusto primis ea eam.
-                </p>
+            <div class="timeline__container timeline__right">
+              <div class="timeline__content d-flex">
+                <div class="timeline__content__date">
+                  <p>Feb 2022 - till now</p>
+                </div>
+                <div class="timeline__content__work">
+                  <p class="timeline__content__place">Freelance</p>
+                  <p class="timeline__content__prof">Front-end developer</p>
+                  <p class="timeline__content__do">
+                    Created microsites, landing pages for Upwork using CMS,
+                    XHTML, HTML5,CSS and JS.
+                  </p>
+                </div>
               </div>
             </div>
-            <div class="cont right">
-              <div class="content">
-                <h2>2016</h2>
-                <p>
-                  Lorem ipsum dolor sit amet, quo ei simul congue exerci, ad nec
-                  admodum perfecto mnesarchum, vim ea mazim fierent detracto. Ea
-                  quis iuvaret expetendis his, te elit voluptua dignissim per,
-                  habeo iusto primis ea eam.
-                </p>
+            <div class="timeline__container timeline__left">
+              <div class="timeline__content timeline__content-left d-flex">
+                <div
+                  class="timeline__content__date timeline__content__date-left"
+                >
+                  <p>May 2019 - Feb 2022</p>
+                </div>
+                <div class="timeline__content__work">
+                  <p class="timeline__content__place">RUE "Minsk Pharmacy"</p>
+                  <p class="timeline__content__prof">Head of pharmacy.</p>
+                  <p class="timeline__content__do">
+                    Run pharmacy, make reports, communicate with people,
+                    dispensing of medicines.
+                  </p>
+                </div>
               </div>
             </div>
-            <div class="cont left">
-              <div class="content">
-                <h2>2015</h2>
-                <p>
-                  Lorem ipsum dolor sit amet, quo ei simul congue exerci, ad nec
-                  admodum perfecto mnesarchum, vim ea mazim fierent detracto. Ea
-                  quis iuvaret expetendis his, te elit voluptua dignissim per,
-                  habeo iusto primis ea eam.
-                </p>
-              </div>
-            </div>
-            <div class="cont right">
-              <div class="content">
-                <h2>2012</h2>
-                <p>
-                  Lorem ipsum dolor sit amet, quo ei simul congue exerci, ad nec
-                  admodum perfecto mnesarchum, vim ea mazim fierent detracto. Ea
-                  quis iuvaret expetendis his, te elit voluptua dignissim per,
-                  habeo iusto primis ea eam.
-                </p>
-              </div>
-            </div>
-            <div class="cont left">
-              <div class="content">
-                <h2>2011</h2>
-                <p>
-                  Lorem ipsum dolor sit amet, quo ei simul congue exerci, ad nec
-                  admodum perfecto mnesarchum, vim ea mazim fierent detracto. Ea
-                  quis iuvaret expetendis his, te elit voluptua dignissim per,
-                  habeo iusto primis ea eam.
-                </p>
-              </div>
-            </div>
-            <div class="cont right">
-              <div class="content">
-                <h2>2007</h2>
-                <p>
-                  Lorem ipsum dolor sit amet, quo ei simul congue exerci, ad nec
-                  admodum perfecto mnesarchum, vim ea mazim fierent detracto. Ea
-                  quis iuvaret expetendis his, te elit voluptua dignissim per,
-                  habeo iusto primis ea eam.
-                </p>
+            <div class="timeline__container timeline__right">
+              <div class="timeline__content d-flex">
+                <div class="timeline__content__date">
+                  <p>Aug 2017 – May 2019</p>
+                </div>
+                <div class="timeline__content__work">
+                  <p class="timeline__content__place">RUE "Minsk Pharmacy"</p>
+                  <p class="timeline__content__prof">Pharmacist.</p>
+                  <p class="timeline__content__do">
+                    Communicate with people, dispensing of medicines.
+                  </p>
+                </div>
               </div>
             </div>
           </div>
