--- a/index.html
+++ b/index.html
@@ -246,9 +246,13 @@
           <a id="experience"></a>
           <h2 class="title skills">Work experience</h2>
           <div class="timeline">
-            <div class="timeline__container timeline__right">
+            <div
+              class="timeline__container timeline__container-now timeline__right"
+            >
               <div class="timeline__content d-flex">
-                <div class="timeline__content__date">
+                <div
+                  class="timeline__content__date timeline__content__date-now"
+                >
                   <p>Feb 2022 - till now</p>
                 </div>
                 <div class="timeline__content__work">
