--- a/index.html
+++ b/index.html
@@ -34,11 +34,12 @@
     </header>
     <main>
       <section class="about">
-        <a id="about"></a>
         <div class="container">
           <div class="about__infs d-flex justify-content-between">
             <div class="about__inf">
-              <p class="about__inf__name">Lizaveta Rabetskaya</p>
+              <h2 id="about" class="title about__inf__name">
+                Lizaveta Rabetskaya
+              </h2>
               <p class="about__inf__role">Front-end developer</p>
               <div class="about__inf__about">
                 <p class="about__inf__about__me">
@@ -70,8 +71,7 @@
       </section>
       <section class="skills">
         <div class="container">
-          <a id="skills"></a>
-          <h2 class="title skills">Skills</h2>
+          <h2 id="skills" class="title skills">Skills</h2>
           <div class="skills__items d-flex justify-content-start">
             <div class="skill__item d-flex flex-column">
               <div class="skill__item__img">
@@ -243,8 +243,7 @@
       </section>
       <section class="experience">
         <div class="container">
-          <a id="experience"></a>
-          <h2 class="title skills">Work experience</h2>
+          <h2 id="experience" class="title skills">Work experience</h2>
           <div class="timeline">
             <div
               class="timeline__container timeline__container-now timeline__right"
