--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
               <h2 id="about" class="title about__inf__name">
                 Lizaveta Rabetskaya
               </h2>
-              <p class="about__inf__role">Front-end developer</p>
+              <h2 class="title about__inf__role">Front-end developer</h2>
               <div class="about__inf__about">
                 <p class="about__inf__about__me">
                   Hi, I am Lizaveta Rabetskaya and I am Junior Front-end
