added anchors for links

--- a/index.html
+++ b/index.html
@@ -35,11 +35,10 @@
     <main>
       <section class="about">
         <div class="container">
+          <a class="anchor" id="about"></a>
           <div class="about__infs d-flex justify-content-between">
             <div class="about__inf">
-              <h2 id="about" class="title about__inf__name">
-                Lizaveta Rabetskaya
-              </h2>
+              <h2 class="title about__inf__name">Lizaveta Rabetskaya</h2>
               <h2 class="title about__inf__role">Front-end developer</h2>
               <div class="about__inf__about">
                 <p class="about__inf__about__me">
@@ -57,9 +56,7 @@
                   Download CV
                 </button>
                 <button class="about__inf__buttons__button">
-                  <a class="button__href" class="button" href="#contact"
-                    >Contact me</a
-                  >
+                  <a class="button__href button" href="#contact">Contact me</a>
                 </button>
               </div>
             </div>
@@ -71,7 +68,8 @@
       </section>
       <section class="skills">
         <div class="container">
-          <h2 id="skills" class="title skills">Skills</h2>
+          <a class="anchor" id="skills"></a>
+          <h2 class="title">Skills</h2>
           <div class="skills__items d-flex justify-content-start">
             <div class="skill__item d-flex flex-column">
               <div class="skill__item__img">
@@ -243,7 +241,8 @@
       </section>
       <section class="experience">
         <div class="container">
-          <h2 id="experience" class="title skills">Work experience</h2>
+          <a class="anchor" id="experience"></a>
+          <h2 class="title">Work experience</h2>
           <div class="timeline">
             <div
               class="timeline__container timeline__container-now timeline__right"
