--- a/index.html
+++ b/index.html
@@ -362,7 +362,58 @@
         </div>
       </section>
       <section class="education">
-        <div class="container"><a id="education">about</a></div>
+        <div class="container">
+          <a class="anchor" id="education"></a>
+          <h2 class="title">Education</h2>
+          <div class="timeline">
+            <div
+              class="timeline__container timeline__container-now timeline__right"
+            >
+              <div class="timeline__content d-flex">
+                <div
+                  class="timeline__content__date timeline__content__date-now"
+                >
+                  <p>Oct 2022 - till now</p>
+                </div>
+                <div class="timeline__content__work">
+                  <p class="timeline__content__place">
+                    IT School Intellect Fox
+                  </p>
+                  <p class="timeline__content__prof">
+                    Front-end developer course
+                  </p>
+                  <p class="timeline__content__do"></p>
+                </div>
+              </div>
+            </div>
+            <div class="timeline__container timeline__left">
+              <div class="timeline__content timeline__content-left d-flex">
+                <div
+                  class="timeline__content__date timeline__content__date-left"
+                >
+                  <p>Sept 2021 - till now</p>
+                </div>
+                <div class="timeline__content__work">
+                  <p class="timeline__content__place">Bumblebee school</p>
+                  <p class="timeline__content__prof">English course</p>
+                </div>
+              </div>
+            </div>
+            <div class="timeline__container timeline__right">
+              <div class="timeline__content d-flex">
+                <div class="timeline__content__date">
+                  <p>Sept 2012 – May 2017</p>
+                </div>
+                <div class="timeline__content__work">
+                  <p class="timeline__content__place">
+                    Vitebsk State Medical University
+                  </p>
+                  <p class="timeline__content__prof">Faculty of Pharmacy</p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
       </section>
       <section class="languages">
         <div class="container"><a id="languages">about</a></div>
