--- a/index.html
+++ b/index.html
@@ -416,7 +416,48 @@
         </div>
       </section>
       <section class="languages">
-        <div class="container"><a id="languages">about</a></div>
+        <div class="container">
+          <a class="anchor" id="languages"></a>
+          <h2 class="title">Languages</h2>
+          <div class="languages__items d-flex justify-content-between">
+            <div class="languages__item">
+              <img
+                class="languages__item__img"
+                src="./assets/imgs/icons/by.svg"
+                alt="Belarusian"
+              />
+              <p class="languages__lang">Belarusian</p>
+              <p class="languages__level">Native – C2</p>
+            </div>
+            <div class="languages__item">
+              <img
+                class="languages__item__img"
+                src="./assets/imgs/icons/by.svg"
+                alt="Belarusian"
+              />
+              <p class="languages__lang">Belarusian</p>
+              <p class="languages__level">Native – C2</p>
+            </div>
+            <div class="languages__item">
+              <img
+                class="languages__item__img"
+                src="./assets/imgs/icons/by.svg"
+                alt="Belarusian"
+              />
+              <p class="languages__lang">Belarusian</p>
+              <p class="languages__level">Native – C2</p>
+            </div>
+            <div class="languages__item">
+              <img
+                class="languages__item__img"
+                src="./assets/imgs/icons/by.svg"
+                alt="Belarusian"
+              />
+              <p class="languages__lang">Belarusian</p>
+              <p class="languages__level">Native – C2</p>
+            </div>
+          </div>
+        </div>
       </section>
       <section class="contact me">
         <div class="container"><a id="contact">about</a></div>
