--- a/index.html
+++ b/index.html
@@ -432,35 +432,64 @@
             <div class="languages__item">
               <img
                 class="languages__item__img"
-                src="./assets/imgs/icons/by.svg"
+                src="./assets/imgs/icons/rus.svg"
                 alt="Belarusian"
               />
-              <p class="languages__lang">Belarusian</p>
+              <p class="languages__lang">Russian</p>
               <p class="languages__level">Native – C2</p>
             </div>
             <div class="languages__item">
               <img
                 class="languages__item__img"
-                src="./assets/imgs/icons/by.svg"
+                src="./assets/imgs/icons/uk.svg"
                 alt="Belarusian"
               />
-              <p class="languages__lang">Belarusian</p>
-              <p class="languages__level">Native – C2</p>
+              <p class="languages__lang">English</p>
+              <p class="languages__level">Intermediate – B1</p>
             </div>
             <div class="languages__item">
               <img
                 class="languages__item__img"
-                src="./assets/imgs/icons/by.svg"
-                alt="Belarusian"
+                src="./assets/imgs/icons/ukraine.svg"
+                alt="Russian"
               />
-              <p class="languages__lang">Belarusian</p>
-              <p class="languages__level">Native – C2</p>
+              <p class="languages__lang">Ukraine</p>
+              <p class="languages__level">Pre-Intermediate – A2</p>
             </div>
           </div>
         </div>
       </section>
-      <section class="contact me">
-        <div class="container"><a id="contact">about</a></div>
+      <section class="contact">
+        <div class="container">
+          <a class="anchor" id="contact"></a>
+          <h2 class="title">Contact me</h2>
+          <div class="contact__content d-flex">
+            <div class="contact__content__photo">
+              <img src="./assets/imgs/liza.jpg" alt="Lizaveta" />
+            </div>
+            <div class="contact__content__inf">
+              <div class="contact__content__inf__links d-flex">
+                <a href="https://github.com/lizavr">
+                  <img src="./assets/imgs/icons/github-icon.svg" alt="github" />
+                </a>
+                <a href="#">
+                  <img src="./assets/imgs/icons/linkedin.svg" alt="linkedin" />
+                </a>
+                <a href="https://t.me/liza_vrr">
+                  <img src="./assets/imgs/icons/telegram.svg" alt="telegram" />
+                </a>
+              </div>
+              <a
+                href="mailto:elizavetarabetskaya@gmail.com"
+                class="contact__content__inf__mail"
+                >elizavetarabetskaya@gmail.com</a
+              >
+              <a href="tel:+375295555555" class="contact__content__inf__phone"
+                >+37529 555 55 55</a
+              >
+            </div>
+          </div>
+        </div>
       </section>
     </main>
     <script src="./node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
