--- a/index.html
+++ b/index.html
@@ -321,6 +321,7 @@
                       class="swiper-slide__content__description__btn about__inf__buttons__button"
                     >
                       <a
+                        target="_blank"
                         class="button__href button"
                         href="https://github.com/lizavr/if-html"
                         >See on Github</a
@@ -346,6 +347,7 @@
                       class="swiper-slide__content__description__btn about__inf__buttons__button"
                     >
                       <a
+                        target="_blank"
                         class="button__href button"
                         href="https://github.com/lizavr/if-html"
                         >See on Github</a
@@ -469,22 +471,26 @@
             </div>
             <div class="contact__content__inf">
               <div class="contact__content__inf__links d-flex">
-                <a href="https://github.com/lizavr">
+                <a target="_blank" href="https://github.com/lizavr">
                   <img src="./assets/imgs/icons/github-icon.svg" alt="github" />
                 </a>
-                <a href="#">
+                <a target="_blank" href="#">
                   <img src="./assets/imgs/icons/linkedin.svg" alt="linkedin" />
                 </a>
-                <a href="https://t.me/liza_vrr">
+                <a target="_blank" href="https://t.me/liza_vrr">
                   <img src="./assets/imgs/icons/telegram.svg" alt="telegram" />
                 </a>
               </div>
               <a
+                target="_blank"
                 href="mailto:elizavetarabetskaya@gmail.com"
                 class="contact__content__inf__mail"
                 >elizavetarabetskaya@gmail.com</a
               >
-              <a href="tel:+375295555555" class="contact__content__inf__phone"
+              <a
+                target="_blank"
+                href="tel:+375295555555"
+                class="contact__content__inf__phone"
                 >+37529 555 55 55</a
               >
             </div>
