--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
           </div>
 
           <div class="skills__hidden" id="secondBlockId">
-            <div class="skills__items d-flex justify-content-between">
+            <div class="skills__items d-flex justify-content-start">
               <div class="skill__item d-flex flex-column">
                 <div class="skill__item__img">
                   <img src="./assets/imgs/icons/pug.svg" alt="Pug" />
@@ -424,8 +424,8 @@
           <div class="languages__items d-flex justify-content-between">
             <div class="languages__item">
               <img
-                class="languages__item__img"
-                src="./assets/imgs/icons/by.svg"
+                class="languages__item__img-by"
+                src="./assets/imgs/icons/by.png"
                 alt="Belarusian"
               />
               <p class="languages__lang">Belarusian</p>
