--- a/index.html
+++ b/index.html
@@ -461,43 +461,43 @@
           </div>
         </div>
       </section>
-      <section class="contact">
-        <div class="container">
-          <a class="anchor" id="contact"></a>
-          <h2 class="title">Contact me</h2>
-          <div class="contact__content d-flex">
-            <div class="contact__content__photo">
-              <img src="./assets/imgs/liza.jpg" alt="Lizaveta" />
+    </main>
+    <footer class="contact">
+      <div class="container">
+        <a class="anchor" id="contact"></a>
+        <h2 class="title">Contact me</h2>
+        <div class="contact__content d-flex">
+          <div class="contact__content__photo">
+            <img src="./assets/imgs/liza.jpg" alt="Lizaveta" />
+          </div>
+          <div class="contact__content__inf">
+            <div class="contact__content__inf__links d-flex">
+              <a target="_blank" href="https://github.com/lizavr">
+                <img src="./assets/imgs/icons/github-icon.svg" alt="github" />
+              </a>
+              <a target="_blank" href="#">
+                <img src="./assets/imgs/icons/linkedin.svg" alt="linkedin" />
+              </a>
+              <a target="_blank" href="https://t.me/liza_vrr">
+                <img src="./assets/imgs/icons/telegram.svg" alt="telegram" />
+              </a>
             </div>
-            <div class="contact__content__inf">
-              <div class="contact__content__inf__links d-flex">
-                <a target="_blank" href="https://github.com/lizavr">
-                  <img src="./assets/imgs/icons/github-icon.svg" alt="github" />
-                </a>
-                <a target="_blank" href="#">
-                  <img src="./assets/imgs/icons/linkedin.svg" alt="linkedin" />
-                </a>
-                <a target="_blank" href="https://t.me/liza_vrr">
-                  <img src="./assets/imgs/icons/telegram.svg" alt="telegram" />
-                </a>
-              </div>
-              <a
-                target="_blank"
-                href="mailto:elizavetarabetskaya@gmail.com"
-                class="contact__content__inf__mail"
-                >elizavetarabetskaya@gmail.com</a
-              >
-              <a
-                target="_blank"
-                href="tel:+375295555555"
-                class="contact__content__inf__phone"
-                >+37529 555 55 55</a
-              >
-            </div>
+            <a
+              target="_blank"
+              href="mailto:elizavetarabetskaya@gmail.com"
+              class="contact__content__inf__mail"
+              >elizavetarabetskaya@gmail.com</a
+            >
+            <a
+              target="_blank"
+              href="tel:+375295555555"
+              class="contact__content__inf__phone"
+              >+37529 555 55 55</a
+            >
           </div>
         </div>
-      </section>
-    </main>
+      </div>
+    </footer>
     <script src="./node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
     <script src="./node_modules/swiper/swiper-bundle.min.js"></script>
     <script src="./js/index.js"></script>
